<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/fragment_below_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/directions" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/distance_view"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="4dp"
                android:text="@string/distance" />

            <TextView
                android:id="@+id/duration_view"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="5dp"
                android:text="@string/duration" />

        </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/location_frag_cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="@dimen/cardview_default_elevation">

        <FrameLayout
            android:id="@+id/location_frag_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v7.widget.CardView>
    </LinearLayout>
</RelativeLayout>